# tetstt

./: .dockerignore  .easypanel-rebuild-stamp  .env.example  .gitignore  AGENTS.md  DEPLOY_EASYPANEL.txt  Dockerfile  Dockerfile.frontend  GAWFOLK_UAE_STORE_RESEARCH.md  LAYALI_AROMA_LAMP_RESEARCH.md  LAYALI_HOME_COMFORT_POSITIONING.md  README.md  docker-compose.yml  gawfolk-uae-cod-store-research.md  package.json  requirements.txt  start.sh
backend/: .env.example  Dockerfile  README.md  agent  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260502_0001_initial.py  20260517_0002_ad_clicks.py  20260521_0003_ad_clicks_geo.py
backend/app/: config.py  database.py  db.py  deployment.py  env_bool.py  integrations.py  main.py  models.py  orders.py  phone.py  products.py  rate_limit.py  schemas.py
backend/app/routers/: admin_dashboard.py  analytics.py  health.py  orders.py
backend/app/services/: admin_jwt.py  client_ip.py  cod_economics.py  fraud.py  geo_click.py  hashing.py  phone.py  sheet_webhook.py  tracking.py
backend/layali_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/sql/: 20260517_ad_clicks_postgres.sql  (+1 more)
backend/tests/: test_cod_economics.py  test_config_sheet_webhook_trim.py  test_fraud_uae.py  test_geo_click.py  test_order_schema_sku.py  test_order_schema_strip.py  test_orders.py  test_orders_lamp_tiers.py  test_phone.py  test_phone_normalize.py  test_sheet_webhook_appscript.py  test_sheet_webhook_response.py  test_sheet_webhook_success_json.py  test_version_endpoint.py
(+151 files in other folders)
